test/langtools/tools/javac/types/LocalFinalVariableTypeInference/ValInMethodSignature.out
ValInMethodSignature.java:10:15: compiler.err.restricted.type.not.allowed.here: val
1 error