test/langtools/tools/javac/types/LocalFinalVariableTypeInference/ValInMethodSignature.java
/*
 * @test
 * @compile/fail/ref=ValInMethodSignature.out -XDrawDiagnostics ValInMethodSignature.java
 */


class ValInMethodSignature {
    // 'val' in method signature
    // error
    void test(val number) { }
}
